--- a/learn/templates/home.html
+++ b/learn/templates/home.html
@@ -70,7 +70,7 @@
               <p class="card-text mb-auto">{{r.con|safe}}</p>
               <a href={% url 'articledisplay' r.cat r.id %}>Continue reading</a>
             </div>
-            <img class="card-img-right flex-auto d-none d-lg-block" src="https://loremflickr.com/200/250/{{r.cat}}" alt="Card image cap">
+            <img class="card-img-right flex-auto d-none d-lg-block" src="https://loremflickr.com/200/250/{{r.cat}}/all" alt="Card image cap">
           </div>
         </div>
         {% endfor %}
