--- a/learn/templates/login.html
+++ b/learn/templates/login.html
@@ -117,7 +117,9 @@ body {
                 <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="passwd" required>
                 <label for="floatingPassword" style="color:black;">Password</label>
               </div>
-          
+              <div class="form-floating">
+                Not signed up?<a href="./register">SIGN UP</a>
+              </div>
               
               <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
             </form>
